--- a/build.gradle
+++ b/build.gradle
@@ -69,10 +69,10 @@ dependencies {
 
     implementation 'com.opencsv:opencsv:5.5.2'
 
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation 'mysql:mysql-connector-java:8.0.26'
+    implementation 'org.springframework:spring-jdbc:5.3.10'
 
-
+    testImplementation "org.testcontainers:mysql:1.16.0"
 }
 
 bootRun {
